--- a/INSTANT-MAGNORMO/accountdialog.ui
+++ b/INSTANT-MAGNORMO/accountdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>275</width>
-    <height>123</height>
+    <width>358</width>
+    <height>154</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,6 +17,25 @@
    <property name="fieldGrowthPolicy">
     <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
    </property>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="serverList">
+     <item>
+      <property name="text">
+       <string>GOD DAMN GTALK</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>GOOGLE TALK FO YO APPS BIIIATCH</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>MUTHA F'IN FACEBOOK</string>
+      </property>
+     </item>
+    </widget>
+   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
@@ -27,17 +46,17 @@
    <item row="2" column="1">
     <widget class="QLineEdit" name="usernameEdit"/>
    </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="passwordEdit">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>PASSWORD</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="passwordEdit">
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
      </property>
     </widget>
    </item>
@@ -48,6 +67,13 @@
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>SERVER</string>
      </property>
     </widget>
    </item>
