Changed contacts so they can have many different states, also contact list now reflects this with different icons (however subtle this may be)

--- a/INSTANT-MAGNORMO/resources.qrc
+++ b/INSTANT-MAGNORMO/resources.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/icons">
-        <file>icons/user-black.png</file>
+        <file alias="user-away">icons/user-black.png</file>
         <file alias="user-offline">icons/user-silhouette.png</file>
         <file alias="user-online">icons/user-thief-baldie.png</file>
     </qresource>
