Some more tweaks

--- a/INSTANT-MAGNORMO/resources.qrc
+++ b/INSTANT-MAGNORMO/resources.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/icons">
-        <file alias="user-away">icons/user-black.png</file>
-        <file alias="user-offline">icons/user-silhouette.png</file>
+        <file alias="user-IDIOT">icons/user-black.png</file>
+        <file alias="user-away">icons/user-silhouette.png</file>
         <file alias="user-online">icons/user-thief-baldie.png</file>
     </qresource>
 </RCC>
