--- a/INSTANT-MAGNORMO/accountmanagerdialog.ui
+++ b/INSTANT-MAGNORMO/accountmanagerdialog.ui
@@ -56,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>90</y>
+     <y>130</y>
      <width>83</width>
      <height>26</height>
     </rect>
@@ -76,6 +76,19 @@
    </property>
    <property name="text">
     <string>EDIT</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="toggleButton">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>70</y>
+     <width>83</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ON/OFF</string>
    </property>
   </widget>
  </widget>
