--- a/INSTANT-MAGNORMO/resources.qrc
+++ b/INSTANT-MAGNORMO/resources.qrc
@@ -3,5 +3,7 @@
         <file alias="user-IDIOT">icons/user-black.png</file>
         <file alias="user-away">icons/user-silhouette.png</file>
         <file alias="user-online">icons/user-thief-baldie.png</file>
+        <file alias="inactive">icons/cross.png</file>
+        <file alias="active">icons/tick.png</file>
     </qresource>
 </RCC>
