--- a/INSTANT-MAGNORMO/conversationwidget.ui
+++ b/INSTANT-MAGNORMO/conversationwidget.ui
@@ -31,7 +31,14 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>35</height>
+      </size>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
