Started to add in support for setting different themes and shit

--- a/INSTANT-MAGNORMO/resources.qrc
+++ b/INSTANT-MAGNORMO/resources.qrc
@@ -12,6 +12,6 @@
         <file alias="gtalk">icons/gtalk.png</file>
     </qresource>
     <qresource prefix="/">
-        <file>styles.css</file>
+        <file>styles/default.magstyle</file>
     </qresource>
 </RCC>
