--- a/INSTANT-MAGNORMO/conversationwidget.ui
+++ b/INSTANT-MAGNORMO/conversationwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>506</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,6 +27,19 @@
      </property>
      <property name="textInteractionFlags">
       <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="pushButton">
+     <property name="minimumSize">
+      <size>
+       <width>100</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>REVERSE SPY</string>
      </property>
     </widget>
    </item>
