--- a/INSTANT-MAGNORMO/conversationwidget.ui
+++ b/INSTANT-MAGNORMO/conversationwidget.ui
@@ -18,15 +18,9 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QTextEdit" name="textEdit">
-     <property name="undoRedoEnabled">
+    <widget class="QTextBrowser" name="textEdit">
+     <property name="openLinks">
       <bool>false</bool>
-     </property>
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-     <property name="textInteractionFlags">
-      <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
      </property>
     </widget>
    </item>
