--- a/INSTANT-MAGNORMO/conversationwidget.ui
+++ b/INSTANT-MAGNORMO/conversationwidget.ui
@@ -50,5 +50,25 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>textEdit</sender>
+   <signal>textChanged()</signal>
+   <receiver>ConversationWidget</receiver>
+   <slot>onMessageChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>199</x>
+     <y>217</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>252</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>onMessageChanged()</slot>
+ </slots>
 </ui>
