--- a/INSTANT-MAGNORMO/conversationwidget.ui
+++ b/INSTANT-MAGNORMO/conversationwidget.ui
@@ -13,12 +13,12 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,0,0" columnstretch="1,0">
    <property name="margin">
     <number>0</number>
    </property>
    <item row="0" column="0" colspan="2">
-    <widget class="QTextBrowser" name="textEdit">
+    <widget class="PrettyTextBrowser" name="textEdit">
      <property name="openLinks">
       <bool>false</bool>
      </property>
@@ -39,6 +39,12 @@
    </item>
    <item row="2" column="0">
     <widget class="QLineEdit" name="lineEdit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -71,6 +77,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PrettyTextBrowser</class>
+   <extends>QTextBrowser</extends>
+   <header>prettytextbrowser.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
